force-app/main/default/objects/Item_da_Solicita_o_de_devolu_o__c/Item_da_Solicita_o_de_devolu_o__c.object-meta.xml
<CustomObject>
    <label>Item da Solicitação de devolução</label>
    <nameField>
        <displayFormat>ISD-{0000}</displayFormat>
        <label>Nome de Item da Solicitação de devolução</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Itens da solicitação de devolução</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>