force-app/main/default/objects/Item_da_Solicita_o_de_devolu_o__c/fields/C_digo_do_produto_do_pedido__c.field-meta.xml
<CustomField>
    <fullName>C_digo_do_produto_do_pedido__c</fullName>
    <inlineHelpText>Insira aqui o código do fabricante do produto que será devolvido</inlineHelpText>
    <label>Código do fabricante</label>
    <length>40</length>
    <type>Text</type>
</CustomField>