force-app/main/default/objects/Item_da_Solicita_o_de_devolu_o__c/fields/codigoFabricante__c.field-meta.xml
<CustomField>
    <fullName>codigoFabricante__c</fullName>
    <formula>Produto_do_pedido__r.PricebookEntry.Product2.ProductCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Código do fabricante</label>
    <type>Text</type>
</CustomField>