force-app/main/default/objects/Item_da_Solicita_o_de_devolu_o__c/fields/id_do_pedido__c.field-meta.xml
<CustomField>
    <fullName>id_do_pedido__c</fullName>
    <formula>Solicita_o_de_devolu_o__r.Pedido__r.id_do_pedido__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>id do pedido</label>
    <type>Text</type>
</CustomField>