force-app/main/default/objects/Item_da_Solicita_o_de_devolu_o__c/fields/id_pedido__c.field-meta.xml
<CustomField>
    <fullName>id_pedido__c</fullName>
    <label>id_pedido</label>
    <length>255</length>
    <type>Text</type>
</CustomField>