force-app/main/default/objects/Item_da_Solicita_o_de_devolu_o__c/fields/imagem__c.field-meta.xml
<CustomField>
    <fullName>imagem__c</fullName>
    <formula>Produto_do_pedido__r.Imagem__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>imagem</label>
    <type>Text</type>
</CustomField>