force-app/main/default/objects/Item_da_Solicita_o_de_devolu_o__c/fields/nomeProduto__c.field-meta.xml
<CustomField>
    <fullName>nomeProduto__c</fullName>
    <formula>Produto_do_pedido__r.Product2.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nome do produto</label>
    <type>Text</type>
</CustomField>