force-app/main/default/objects/Item_da_Solicita_o_de_devolu_o__c/fields/numeroSerie__c.field-meta.xml
<CustomField>
    <fullName>numeroSerie__c</fullName>
    <label>Numero de Serie</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>