force-app/main/default/objects/Item_da_Solicita_o_de_devolu_o__c/fields/Pedido__c.field-meta.xml
<CustomField>
    <fullName>Pedido__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Pedido</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Itens da solicitação de devolução</relationshipLabel>
    <relationshipName>Itens_da_solicita_o_de_devolu_o</relationshipName>
    <type>Lookup</type>
</CustomField>