force-app/main/default/objects/Item_da_Solicita_o_de_devolu_o__c/fields/Produto_do_pedido__c.field-meta.xml
<CustomField>
    <fullName>Produto_do_pedido__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Vínculo com o produto do pedido, utilizar para preencher o campo acima.</inlineHelpText>
    <label>Produto do pedido</label>
    <referenceTo>OrderItem</referenceTo>
    <relationshipLabel>Itens da solicitação de devolução</relationshipLabel>
    <relationshipName>Itens_da_solicita_o_de_devolu_o</relationshipName>
    <type>Lookup</type>
</CustomField>