force-app/main/default/objects/Item_da_Solicita_o_de_devolu_o__c/fields/Solicita_o_de_devolu_o__c.field-meta.xml
<CustomField>
    <fullName>Solicita_o_de_devolu_o__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Solicitação de devolução</label>
    <referenceTo>Solicita_o_de_devolu_o__c</referenceTo>
    <relationshipLabel>Itens da solicitação de devolução</relationshipLabel>
    <relationshipName>Itens_da_solicita_o_de_devolu_o</relationshipName>
    <type>Lookup</type>
</CustomField>