force-app/main/default/objects/Item_da_Solicita_o_de_devolu_o__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Novo</fullName>
                <default>true</default>
                <label>Novo</label>
            </value>
            <value>
                <fullName>Devolvido</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>