force-app/main/default/objects/Item_da_Solicita_o_de_devolu_o__c/fields/Valor_do_Produto_do_Pedido__c.field-meta.xml
<CustomField>
    <fullName>Valor_do_Produto_do_Pedido__c</fullName>
    <formula>Produto_do_pedido__r.UnitPrice *  Quantidade__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valor do Produto do Pedido</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>