force-app/main/default/objects/Item_da_Solicita_o_de_devolu_o__c/validationRules/Qtd_Superior.validationRule-meta.xml
<ValidationRule>
    <fullName>Qtd_Superior</fullName>
    <active>true</active>
    <errorConditionFormula>Quantidade__c &gt; Produto_do_pedido__r.Quantity</errorConditionFormula>
    <errorMessage>Quantidade informada maior que do item do pedido.</errorMessage>
</ValidationRule>